--- a/App/templates/newsbase.html
+++ b/App/templates/newsbase.html
@@ -1,36 +1,82 @@
-{% extends "bootstrap/base.html" %}
-
-{% block title %}Flasky{% endblock %}
+{% extends "base.html" %}
+{% block title %}HoteNews{% endblock %}
 
 {% block head %}
 {{ super() }}
-<link rel="shortcut icon" href="{{url_for('static',filename='image/hm-logo.png')}}" type="image/x-icon">
-<link rel="icon" href="{{url_for('static',filename='image/hm-logo.png')}}" type="image/x-icon">
-<link rel="stylesheet" href="{{url_for('static',filename='css/news.css')}}" type="text/css">
+<link rel="stylesheet" href="{{url_for('static',filename='css/news-black.css')}}" type="text/css">
 {% endblock %}
 
-{% block navbar %}
-<div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <img src="{{url_for('static',filename='image/hm-logo.png')}}" style="width:50px; height:50px;"/>
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">HotNews</a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('main.index') }}">Home</a></li>
-                <li><a href="http://momentjs.cn/">{{ moment().format('YYYY-MM-DD hh:mm', refresh=True) }}</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-{% endblock %}
 {% block content %}
 <div class="container">
-    <div class="row">
-        <div class="col-md-8">
-            {% block page_content %}
-            {% endblock %}
+    <div class="row news-content">
+        <div class="col-md-8 m-cover">
+            <ul class="posts list-group ">
+                <li class="row list-group-item">
+                    {% block page_content %}
+                    {% endblock %}
+                </li>
+
+                {% if current_user.can(Permission.WRITE) %}
+                    <li class="row list-group-item" style="padding:30px;">
+                        <div class="col-md-4">
+                            {% include "button/thumb.html" %}
+                        </div>
+                        <div class="col-md-4">
+                            {% include "button/collect.html" %}
+                        </div>
+                        <div class="col-md-4">
+                            {% include "button/transpond.html" %}
+                        </div>
+                    </li>
+                    <li id="post" class="row list-group-item">
+                        {{ wtf.quick_form(comment_form) }}
+                    </li>
+                    {% for comment in pagination.items %}
+                    <li class="post row list-group-item">
+                        <div class="post-thumbnail col-md-1">
+                            <a href="/user/{{ comment.info.name}}">
+                                <img class="img-rounded profile-thumbnail" src="{{ comment.info.gravatar(size=40) }}">
+                            </a>
+                        </div>
+
+                        <div class="post-content col-md-11">
+                            <div class="row">
+                                <div class="post-date col-md-2"><a href="/user/{{ comment.info.name }}">{{ comment.info.name }}</a></div>
+                                <div class="post-author col-md-2 col-md-push-8">{{ comment.timestamp.__str__()[5:-3] }}</div>
+                            </div>
+                            <div class="post-body">{{ comment.body }}</div>
+                        </div>
+                    </li>
+                    {% endfor %}
+                    <div class="list-group-item row" style="text-align: center;">
+                        <ul class="pagination" style="margin: 0px;">
+                            {% if pagination.hasPrev %}
+                                <li><a href="{{url}}?{{pagination.page-1}}">&laquo;</a></li>
+                            {% endif %}
+                            {% for i in range(1, pagination.pages + 1)%}
+                                {% if i == pagination.page %}
+                                    <li class="active"><a href="{{url}}?page={{i}}">{{i}}</a></li>
+                                {% elif i == 1 or i == pagination.pages%}
+                                    <li><a href="{{url}}?page={{i}}">{{i}}</a></li>
+                                {% elif i > pagination.page - 8 and i < pagination.page + 8 %}
+                                    <li><a href="{{url}}?page={{i}}">{{i}}</a></li>
+                                {% elif i == pagination.page -8 or i == pagination.page + 8 %}
+                                    <li><a href="#">...</a></li>
+                                {% endif %}
+                            {% endfor %}
+                            {% if pagination.hasNext %}
+                                <li><a href="{{url}}?{{pagination.page+1}}">&raquo;</a></li>
+                            {% endif %}
+                        </ul>
+                    </div>
+                {% else %}
+                <li class="list-group-item center row">
+                    <a class="row end-bottom btn"  href="{{ url_for('auth.login') }}">
+                        <h4><strong>登录</strong></h4>
+                    </a>
+                </li>
+                {% endif %}
+            </ul>
         </div>
         <div class="col-md-4">
                 <div class="list-group">
@@ -68,4 +114,3 @@
     </div>
 </div>
 {% endblock %}
-
