--- a/App/static/css/index-black.css
+++ b/App/static/css/index-black.css
@@ -35,6 +35,10 @@ img.image {
 
 .news-image {
     width: 120px;
+}
+
+.image-item {
+    width: 120px;
     height: 80px;
     overflow: hidden;
     border-radius: 5px;
