--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -26,6 +26,7 @@
                         <li><a href="/time/1"><h4>时间</h4></a></li>
                         <li><a href="/types"><h4>类型</h4></a></li>
                         <li><a href="/user-post/1"><h4>文章</h4></a></li>
+                        <li><a href="/show-table"><h4>图表</h4></a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right" style="position: relative;">
                         <li><a href="http://momentjs.cn/"><h4 style="margin: 0px; margin-top:3px">{{ moment().format('YYYY-MM-DD hh:mm', refresh=True) }}</h4></a></li>
